--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <!--Convertor-->
 
 <div class="container">
-  <b><h3 style="color:white;"><center>Currency converter</center></h3></b>
+  <b><h3 style="color:white;"><center>Konvertor valuta</center></h3></b>
 </div>
 
 <div class="container">
